# gorlock

./: .gitignore  Cargo.toml  README.md  demo.tape  perfect-demo.tape  quick-demo.tape  readme-demo.tape  showcase.tape
src/: cache.rs  main.rs  thumbnail.rs
src/app_state/: events.rs  mod.rs
src/commands/: fast_fetch.rs  mod.rs  parallel_processor.rs  yt_dlp.rs
src/ui/: app.rs  components.rs  events.rs  mod.rs
