[package]
name = "gorlock"
version = "0.1.0"
edition = "2021"
authors = ["Yuri"]
license = "MIT"
description = "A beautiful TUI for yt-dlp written in Rust - download videos with style"
readme = "README.md"
homepage = "https://github.com/yourusername/gorlock"
repository = "https://github.com/yourusername/gorlock"
keywords = ["youtube", "downloader", "tui", "terminal", "yt-dlp"]
categories = ["command-line-utilities", "multimedia"]

[[bin]]
name = "gorlock"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
image = "0.24"
reqwest = { version = "0.11", features = ["stream"] }
lazy_static = "1.4"
once_cell = "1.19"
dashmap = "5.5"  # Fast concurrent hashmap for caching
arc-swap = "1.6"  # Atomic reference counting for less cloning
smallvec = "1.11" # Stack-allocated vectors for small collections

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
assert_cmd = "2.0"

[profile.release]
opt-level = 3          # Maximum optimizations
lto = true            # Link-time optimization
codegen-units = 1     # Single codegen unit for better optimization
strip = true          # Strip debug symbols
panic = "abort"       # Smaller binary, faster panic

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

# Feature flags for different fetch modes
[features]
default = ["fast-fetch"]
fast-fetch = []       # Use lightweight metadata fetching
legacy-fetch = []     # Use traditional JSON fetching
mock-yt = []         # Mock yt-dlp for testing
